# atri

./: .env.example  .gitignore  .gitmodules  README.en.md  README.md  config.yaml  install.sh  pyproject.toml  执行准则.md
config/: asr_config.yaml  auth.yaml  llm_config.yaml  memory_config.yaml  server_config.yaml  storage_config.yaml  translate_config.yaml  tts_config.yaml
docs/: ASR配置说明.md  quickstart.md  对话历史存储与批量删除说明.md  角色创建指南.md
prompts/: prompt_loader.py
prompts/compress/: l3_collapse.txt  l4_super_compact.txt
prompts/persona/: atri.md
scripts/: generate_jwt_secret.py  live_llm_smoke.py
src/: app.py  main.py  service_context.py
src/agent/: __init__.py  chat_agent.py  persona.py
src/asr/: __init__.py  config.py  exceptions.py  factory.py  interface.py  service.py
src/auth/: __init__.py  dependencies.py  exceptions.py  jwt.py  oauth.py  service.py  whitelist.py
src/llm/: __init__.py  exceptions.py  factory.py  interface.py
src/memory/: _io_utils.py  chat_history.py  compressor.py  long_term.py  manager.py  short_term.py  snip.py
src/models/: __init__.py  asr.py  character.py
src/routes/: asr.py  auth.py  characters.py  chat_ws.py  chats.py  health.py
src/storage/: __init__.py  character_storage.py  db_storage.py  factory.py  interface.py  json_storage.py
src/tts/: service.py
src/utils/: config_loader.py  logger.py
tests/: test_service_context.py
tests/agent/: __init__.py  chat-history.txt  test-exe.md  test_chat_agent.py  test_live_chat_agent.py  test_persona_loader.py
tests/asr/: test-exe.md
tests/auth/: test_jwt.py  (+1 more)
(+34 files in other folders)
